// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination[Base] should render correctly  1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <div
    class="soui-pagination-section soui-pagination-buttons"
  >
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text"
      dir="ltr"
      type="button"
    >
      1000
    </button>
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about align 1`] = `
<div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-center"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-right"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about control 1`] = `
<div>
  <div
    style="display: flex; align-items: center; margin-bottom: 24px;"
  >
    <span
      style="font-size: 14px;"
    >
      Jump to
    </span>
    <div
      class="soui-input-wrapper-number soui-input soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 80px; margin-inline-start: 8px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          type="text"
          value="1"
        />
      </div>
      <div
        class="soui-input-number-step"
      >
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span>
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about disabled 1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <div
    class="soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="soui-pagination-section soui-pagination-buttons"
  >
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-disabled soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      1
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      2
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      3
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      4
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      5
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      50
    </button>
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="soui-pagination-section soui-pagination-size-list"
  >
    <div
      class="soui-select soui-select-wrapper soui-select-wrapper-disabled"
      data-soui-input-border="true"
    >
      <div
        class="soui-select-result-wrapper soui-select-wrapper-padding-box soui-select-wrapper-inner-title-top soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="soui-select-result"
        >
          <div
            class="soui-select-result-text-wrapper"
          >
            <span
              class="soui-select-ellipsis"
              title="10  / page"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="soui-select-icon-wrapper"
        >
          <span
            class="soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-pagination-section soui-pagination-jumper"
  >
    <span
      class="soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="soui-pagination-section soui-pagination-jumper-input soui-input soui-input-wrapper soui-input-wrapper-disabled"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          disabled=""
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about jumper 1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <div
    class="soui-pagination-section soui-pagination-buttons"
  >
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      10
    </button>
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="soui-pagination-section soui-pagination-jumper"
  >
    <span
      class="soui-pagination-section"
    >
      Go to 
    </span>
    <div
      class="soui-pagination-section soui-pagination-jumper-input soui-input soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="soui-pagination-section"
    >
       Page
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about mode 1`] = `
<div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-outline soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-outline soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about simple 1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <button
    class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
    dir="ltr"
    disabled=""
    type="button"
  >
    <span
      class="soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
  <div
    class="soui-pagination-section soui-pagination-jumper"
  >
    <div
      class="soui-pagination-section soui-pagination-jumper-input soui-input soui-input-wrapper"
      data-soui-input-border="true"
      style="width: 56px;"
    >
      <div
        class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
      >
        <input
          class="soui-input-input"
          type="text"
          value="1"
        />
      </div>
    </div>
    <span
      class="soui-pagination-section soui-pagination-split"
    >
      /
    </span>
    <span
      class="soui-pagination-section"
    >
      5
    </span>
  </div>
  <button
    class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
    dir="ltr"
    type="button"
  >
    <span
      class="soui-pagination-icon"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          clip-rule="evenodd"
          d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Pagination[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left soui-pagination-small"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-small"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left soui-pagination-large"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square soui-button-large"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about span 1`] = `
<div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
        dir="ltr"
        disabled=""
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        2
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        3
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        4
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        6
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        7
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="soui-pagination soui-pagination-pagination soui-pagination-left"
  >
    <div
      class="soui-pagination-section soui-pagination-buttons"
    >
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        1
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        5
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        6
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        7
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        8
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        9
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
        dir="ltr"
        type="button"
      >
        10
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        11
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        12
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        13
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        14
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
            />
          </svg>
        </span>
      </button>
      <button
        class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text"
        dir="ltr"
        type="button"
      >
        100
      </button>
      <button
        class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
        dir="ltr"
        type="button"
      >
        <span
          class="soui-pagination-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about text 1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <div
    class="soui-pagination-section soui-pagination-buttons"
  >
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span>
        Previous
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      26
    </button>
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text"
      dir="ltr"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>
  <div
    class="soui-pagination-section soui-pagination-size-list"
  >
    <div
      class="soui-select soui-select-wrapper"
      data-soui-input-border="true"
      tabindex="0"
    >
      <div
        class="soui-select-result-wrapper soui-select-wrapper-padding-box soui-select-wrapper-inner-title-top soui-select-wrapper-inner-title-bottom"
      >
        <div
          class="soui-select-result"
        >
          <div
            class="soui-select-result-text-wrapper"
          >
            <span
              class="soui-select-ellipsis"
              title="10  / page"
            >
              10  / page
            </span>
          </div>
        </div>
        <div
          class="soui-select-icon-wrapper"
        >
          <span
            class="soui-select-arrow-icon"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M6.00203 10.0605C5.6115 9.67002 5.6115 9.03686 6.00203 8.64633C6.39255 8.25581 7.02572 8.25581 7.41624 8.64633L12.002 13.2321L16.5878 8.64633C16.9783 8.25581 17.6115 8.25581 18.002 8.64633C18.3926 9.03686 18.3926 9.67002 18.002 10.0605L12.7091 15.3534C12.3186 15.744 11.6854 15.744 11.2949 15.3534L6.00203 10.0605Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="soui-pagination-section"
  >
    <span>
      1 to 10 of 256 items
    </span>
  </div>
</div>
`;

exports[`Pagination[Base] should render correctly about total 1`] = `
<div
  class="soui-pagination soui-pagination-pagination soui-pagination-left"
>
  <div
    class="soui-pagination-section"
  >
    <span>
      total 500
    </span>
  </div>
  <div
    class="soui-pagination-section soui-pagination-buttons"
  >
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-disabled soui-button-text soui-button-square"
      dir="ltr"
      disabled=""
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-primary soui-button-button soui-button-square"
      dir="ltr"
      type="button"
    >
      1
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      2
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      3
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      4
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      5
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.00195 10C5.10652 10 6.00195 10.8954 6.00195 12C6.00195 13.1046 5.10652 14 4.00195 14C2.89738 14 2.00195 13.1046 2.00195 12C2.00195 10.8954 2.89738 10 4.00195 10ZM12.002 10C13.1065 10 14.002 10.8954 14.002 12C14.002 13.1046 13.1065 14 12.002 14C10.8974 14 10.002 13.1046 10.002 12C10.002 10.8954 10.8974 10 12.002 10ZM20.002 10C21.1065 10 22.002 10.8954 22.002 12C22.002 13.1046 21.1065 14 20.002 14C18.8974 14 18.002 13.1046 18.002 12C18.002 10.8954 18.8974 10 20.002 10Z"
          />
        </svg>
      </span>
    </button>
    <button
      class="soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      50
    </button>
    <button
      class="soui-pagination-section soui-pagination-button-item soui-button soui-button-secondary soui-button-button soui-button-text soui-button-square"
      dir="ltr"
      type="button"
    >
      <span
        class="soui-pagination-icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M10.0625 17.9999C9.67198 18.3904 9.03881 18.3904 8.64829 17.9999C8.25776 17.6094 8.25776 16.9762 8.64829 16.5857L13.2341 11.9999L8.64829 7.41414C8.25776 7.02361 8.25776 6.39045 8.64829 5.99992C9.03881 5.6094 9.67198 5.6094 10.0625 5.99992L15.3554 11.2928C15.7459 11.6833 15.7459 12.3165 15.3554 12.707L10.0625 17.9999Z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
